--- a/angular.json
+++ b/angular.json
@@ -3,5 +3,138 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
+    "sorec-side-menu": {
+      "projectType": "library",
+      "root": "projects/sorec-side-menu",
+      "sourceRoot": "projects/sorec-side-menu/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/sorec-side-menu/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/sorec-side-menu/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/sorec-side-menu/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/sorec-side-menu/tsconfig.spec.json",
+            "polyfills": ["zone.js", "zone.js/testing"]
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/sorec-side-menu/**/*.ts",
+              "projects/sorec-side-menu/**/*.html"
+            ],
+            "eslintConfig": "projects/sorec-side-menu/eslint.config.js"
+          }
+        }
+      }
+    },
+    "sorec-testbed-app": {
+      "projectType": "application",
+      "schematics": {},
+      "root": "projects/sorec-testbed-app",
+      "sourceRoot": "projects/sorec-testbed-app/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:application",
+          "options": {
+            "outputPath": "dist/sorec-testbed-app",
+            "index": "projects/sorec-testbed-app/src/index.html",
+            "browser": "projects/sorec-testbed-app/src/main.ts",
+            "polyfills": ["zone.js"],
+            "tsConfig": "projects/sorec-testbed-app/tsconfig.app.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "projects/sorec-testbed-app/public"
+              }
+            ],
+            "styles": ["projects/sorec-testbed-app/src/styles.css"],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "buildTarget": "sorec-testbed-app:build:production"
+            },
+            "development": {
+              "buildTarget": "sorec-testbed-app:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "polyfills": ["zone.js", "zone.js/testing"],
+            "tsConfig": "projects/sorec-testbed-app/tsconfig.spec.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "projects/sorec-testbed-app/public"
+              }
+            ],
+            "styles": ["projects/sorec-testbed-app/src/styles.css"],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/sorec-testbed-app/**/*.ts",
+              "projects/sorec-testbed-app/**/*.html"
+            ],
+            "eslintConfig": "projects/sorec-testbed-app/eslint.config.js"
+          }
+        }
+      }
+    }
+  },
+  "cli": {
+    "schematicCollections": ["angular-eslint"]
   }
 }
