--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "sorec-side-menu:build": "ng build sorec-side-menu",
+    "sorec-side-menu:lint": "ng lint sorec-side-menu",
+    "sorec-side-menu:test": "ng test sorec-side-menu --no-watch --no-progress --browsers=ChromeHeadless",
+    "sorec-side-menu:publish": "npm run sorec-side-menu:test && npm run sorec-side-menu:lint && npm run sorec-side-menu:build && npm publish dist/sorec-side-menu/"
   },
   "private": true,
   "dependencies": {
@@ -18,20 +23,29 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@tailwindcss/postcss": "^4.0.8",
+    "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.0.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^19.1.8",
     "@angular/cli": "^19.1.5",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "angular-eslint": "19.1.0",
+    "eslint": "^9.20.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "ng-packagr": "^19.1.0",
+    "prettier": "3.5.2",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "8.23.0"
   }
 }
